--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "meal-planner",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cch5ng/meal-planner.git"
+  },
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -19,6 +23,8 @@
     "babel-preset-react-hmre": "^1.0.1",
     "babel-preset-survivejs-kanban": "^0.1.1",
     "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.9.0",
+    "html-webpack-template": "^4.0.0",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
@@ -33,6 +39,7 @@
     "object-assign": "^4.0.1",
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.2",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "react-router": "^2.0.0"
   }
 }
